Fix layout issue (sticky tile footer)

--- a/src/widgets/circle-ci-build/styles.scss
+++ b/src/widgets/circle-ci-build/styles.scss
@@ -17,6 +17,9 @@
   border-radius: 5px;
   position: relative;
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .tile-title {
@@ -68,6 +71,7 @@
 }
 
 .tile-footer {
+  overflow: hidden;
   position: relative;
   padding: 5px;
   border-top: 1px solid gray;
